kubernetes/qsb/apps/home-automation/home-assistant/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: home-assistant
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  egress:
    # mosquitto
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: mosquitto
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP

    # scrypted
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: scrypted
      toPorts:
        - ports:
            - port: "34135"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "10443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: selenium
      toPorts:
        - ports:
            - port: "4444"
              protocol: TCP
